--- a/app/src/main/res/layout/trick.xml
+++ b/app/src/main/res/layout/trick.xml
@@ -25,7 +25,8 @@
         android:id="@+id/trick_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="11dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
 </androidx.constraintlayout.widget.ConstraintLayout>
