--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,12 +86,12 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPersonName2" />
 
     <Button
-        android:id="@+id/youtube_api"
+        android:id="@+id/resume_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:onClick="youtube"
-        android:text="Youtube"
+        android:layout_marginTop="24dp"
+        android:onClick="resumeGame"
+        android:text="Resume Game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_button" />
