--- a/app/src/main/res/layout/trick_validation.xml
+++ b/app/src/main/res/layout/trick_validation.xml
@@ -21,7 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
         android:layout_marginTop="88dp"
-        android:text="Score"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toEndOf="@+id/player1_text"
         app:layout_constraintTop_toBottomOf="@+id/player2_no" />
@@ -42,7 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
         android:layout_marginTop="24dp"
-        android:text="Score"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -86,8 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Yes"
-        app:layout_constraintEnd_toStartOf="@+id/player1_no"
-        app:layout_constraintHorizontal_bias="0.762"
+        app:layout_constraintEnd_toStartOf="@+id/player2_no"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player2_trick_land" />
 
@@ -127,12 +124,13 @@
         android:id="@+id/restart_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="restartGame"
         android:text="Restart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/continue_button"
-        app:layout_constraintVertical_bias="0.258" />
+        app:layout_constraintVertical_bias="0.122" />
 
     <TextView
         android:id="@+id/gameover_text"
