--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="160dp"
         android:background="#00000000"
+        android:onClick="loginButton"
         android:text="login/register"
         android:textColor="#2196F3"
         android:textSize="20dp"
