--- a/app/src/main/res/layout/trick_validation.xml
+++ b/app/src/main/res/layout/trick_validation.xml
@@ -85,6 +85,7 @@
         android:layout_marginTop="12dp"
         android:text="Yes"
         app:layout_constraintEnd_toStartOf="@+id/player2_no"
+        app:layout_constraintHorizontal_bias="0.762"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player2_trick_land" />
 
