--- a/app/src/main/res/layout/trick_validation.xml
+++ b/app/src/main/res/layout/trick_validation.xml
@@ -127,6 +127,7 @@
         android:id="@+id/restart_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:onClick="restartGame"
         android:text="Restart"
         app:layout_constraintBottom_toBottomOf="parent"
