--- a/app/src/main/res/layout/trick_list.xml
+++ b/app/src/main/res/layout/trick_list.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="It is name's turn:"
+        android:text="@string/it_is_name_s_turn"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,11 +39,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="165dp"
         android:layout_marginEnd="188dp"
-        android:text="Please select your trick from the list below:"
+        android:text="@string/please_select_your_trick_from_the_list_below"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/add_trick_button" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_to_refresh"
@@ -68,14 +68,14 @@
             android:id="@+id/add_trick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add trick" />
+            android:text="@string/add_trick" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="If the trick does not exist in the list above, add a new one below"
+        android:text="@string/if_the_trick_does_not_exist_in_the_list_above_add_a_new_one_below"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player_turn" /><![CDATA[
@@ -91,34 +91,38 @@
     <EditText
         android:id="@+id/trick_name_input"
         android:layout_width="240dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:ems="10"
-        android:hint="Enter your trick name here"
+        android:hint="@string/enter_your_trick_name_here"
         android:inputType="textPersonName"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.415"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/trick_difficulty_input"
         android:layout_width="242dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Enter your trick difficulty here"
+        android:hint="@string/enter_your_trick_difficulty_here"
         android:inputType="textPersonName"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.408"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trick_name_input" />
+        app:layout_constraintTop_toBottomOf="@+id/trick_name_input"
+        android:autofillHints="" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_trick_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="addTrick"
-        android:text="add trick"
+        android:text="@string/add_trick_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
